--- a/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
@@ -49,6 +49,10 @@
                     ${calificacionPendientesModelo.pendientesGramatica}
                 </h:column>
                 <h:column>
+                    <f:facet name="header">promedio general grupo</f:facet>
+                    ${calificacionPendientesModelo.promedio}
+                </h:column>
+                <h:column>
                     <f:facet name="header">${etiqueta['detail']}</f:facet>
                     <button class="uk-icon-button" uk-icon="more-vertical"/>
                     <h:panelGroup layout="block" styleClass="uk-dropdown" pt:uk-dropdown="mode: click; boundary: .uk-table">
