--- a/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
@@ -6,10 +6,21 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
                 xmlns:pa="http://xmlns.jcp.org/jsf/composite/paginacion">
-<ui:define name="menu"> </ui:define>
+<ui:define name="menu">
+    <ul class="uk-nav uk-nav-default uk-nav-parent-icon" uk-nav="">
+        <li class="uk-nav-header">#{etiqueta['menu']}</li>
+        <li class="uk-parent uk-open">
+            <a><h:graphicImage library="img" name="icono/escuela.svg" styleClass="uk-icon uk-icon-image uk-margin-small-right" pt:uk-svg=""/><span class="uk-text-capitalize">#{administracion['menu.schools']}</span></a>
+            <ul class="uk-nav-sub">
+                <li class="uk-active"><a><h:outputText pt:uk-icon="home" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.dashboard']}</span></a></li>
+            </ul>
+        </li>
+    </ul>
+</ui:define>
 <ui:define name="contenido">
     <section class="contenido">
         <h:outputStylesheet library="css" name="/coordinador/coordinador.css"/>
+        <ui:remove>
         <div class="informacion-profesor">
             <div class="uk-card uk-card-default uk-card-body ">
                 <h:graphicImage library="img"  width="100" height="100" name="/avatar/coordinador.svg"/>
@@ -17,6 +28,7 @@
                 <p class="uk-text-meta uk-margin-medium-top">#{coordinadorControladorLocal.coordinadorModelo.apodo}</p>
             </div>
         </div>
+        </ui:remove>
         <div class="informacion-escuela">
             <div>
                 <div class="encabezado">Star</div>
@@ -33,7 +45,7 @@
 
         </div>
         <div class="tabla">
-
+            <h3>Profesores</h3>
             <h:dataTable value="#{coordinadorDashboardControlador.profesorGrupoAlumnoModeloLista}"
                          var="profesorGrupoAlumnoModelo"
                          styleClass="uk-table uk-table-hover uk-table-divider"
