--- a/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:pa="http://xmlns.jcp.org/jsf/composite/paginacion">
+      xmlns:pa="http://xmlns.jcp.org/jsf/composite/paginacion" xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <ui:composition template="/template/administracion/dashboard.xhtml">
     <f:metadata>
@@ -22,6 +22,7 @@
                     <li class="uk-active"><h:link outcome="dashboard"><h:outputText pt:uk-icon="home" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.dashboard']}</span></h:link></li>
                 </ul>
             </li>
+            <ui:remove>
             <li class="uk-parent">
                 <h:link><h:outputText pt:uk-icon="database" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.catalog']}</span></h:link>
                 <ul class="uk-nav-sub">
@@ -36,6 +37,7 @@
                     <li><h:link outcome="detalle-profesor"><h:outputText pt:uk-icon="home" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.admingroup']}</span></h:link></li>
                 </ul>
             </li>
+            </ui:remove>
         </ul>
     </ui:define>
     <ui:define name="contenido">
@@ -159,7 +161,7 @@
                 </div>
             </div>
         </div>
-        <h:panelGroup layout="block" id="modal-coordinador" pt:uk-modal="">
+        <h:panelGroup layout="block" id="modal-coordinador" styleClass="uk-modal-container" pt:uk-modal="">
             <div class="uk-modal-dialog uk-margin-auto-vertical">
                 <div class="uk-modal-header uk-background-secondary">
                     <p class="uk-h4 uk-text-center uk-text-bold">
@@ -172,7 +174,7 @@
                 <h:form id="formulario-modal-coordinador">
                     <div class="uk-modal-body">
                         <div class="uk-grid-small uk-grid uk-form-stacked" uk-grid="">
-                            <div class="uk-width-1-1@s uk-width-1-3@m">
+                            <div class="uk-width-1-1@s uk-width-1-6@m">
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" value="#{administracion['catalogocoordinador.coordinator.detail.table.header.nick']}" for="modal-nick"/>
                                 <div class="uk-form-controls">
                                     <h:inputText
@@ -188,7 +190,7 @@
                                 </div>
                                 <h:message for="modal-nick" styleClass="uk-text-danger uk-display-inline-block primera-mayuscula"/>
                             </div>
-                            <div class="uk-width-1-1@s uk-width-2-3@m ">
+                            <div class="uk-width-1-1@s uk-width-1-4@m ">
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" value="#{administracion['catalogocoordinador.coordinator.block.table.header.name']}" for="modal-nombre"/>
                                 <div class="uk-form-controls">
                                     <h:inputText
@@ -202,7 +204,7 @@
                                 </div>
                                 <h:message for="modal-nombre" errorClass="uk-text-danger uk-display-inline-block primera-mayuscula"/>
                             </div>
-                            <div class="uk-width-1-1@s uk-width-1-2@m ">
+                            <div class="uk-width-1-1@s uk-width-1-4@m">
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" value="#{administracion['detallecoordinador.coordinator.active.modal.last.name']}" for="modal-paterno"/>
                                 <div class="uk-form-controls">
                                     <h:inputText
@@ -216,7 +218,7 @@
                                 </div>
                                 <h:message for="modal-paterno" errorClass="uk-text-danger uk-display-inline-block primera-mayuscula"/>
                             </div>
-                            <div class="uk-width-1-1@s uk-width-1-2@m ">
+                            <div class="uk-width-1-1@s uk-width-1-4@m">
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" value="#{administracion['detallecoordinador.coordinator.active.modal.mothers.last']}" for="modal-materno"/>
                                 <div class="uk-form-controls">
                                     <h:inputText
@@ -230,7 +232,16 @@
                                 </div>
                                 <h:message for="modal-materno" errorClass="uk-text-danger uk-display-inline-block primera-mayuscula"/>
                             </div>
-                            <div class="uk-width-1-1@s uk-width-2-3@m uk-first-column">
+                            <div class="uk-width-1-1@s uk-width-1-6@m">
+                                <h:outputLabel for="select-sexo" value="sexo"/>
+                                <div class="uk-form-controls">
+                                    <h:selectOneMenu id="select-sexo" styleClass="uk-select" value="#{coordinadorControlador.coordinadorModelo.sexo}">
+                                        <f:selectItem itemValue="m" itemLabel="masculino"/>
+                                        <f:selectItem itemValue="f" itemLabel="femenino"/>
+                                    </h:selectOneMenu>
+                                </div>
+                            </div>
+                            <div class="uk-width-1-1@s uk-width-1-3@m">
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" value="#{administracion['catalogocoordinador.coordinator.detail.table.header.email']}" for="modal-email"/>
                                 <div class="uk-form-controls">
                                     <h:inputText
@@ -245,16 +256,9 @@
                                 </div>
                                 <h:message for="modal-email" errorClass="uk-text-danger uk-display-inline-block primera-mayuscula"/>
                             </div>
-                            <div class="uk-width-1-1@s uk-width-1-3@m">
-                                <h:outputLabel for="select-sexo" value="sexo"/>
-                                <div class="uk-form-controls">
-                                    <h:selectOneMenu id="select-sexo" styleClass="uk-select" value="#{coordinadorControlador.coordinadorModelo.sexo}">
-                                        <f:selectItem itemValue="m" itemLabel="masculino"/>
-                                        <f:selectItem itemValue="f" itemLabel="femenino"/>
-                                    </h:selectOneMenu>
-                                </div>
-                            </div>
-                            <div class="uk-width-1-1@s uk-width-1-3@m ">
+
+                            <div class="uk-width-1-1@m">
+                                <ui:remove>
                                 <h:outputLabel for="input-secret-editar-password" styleClass=" uk-text-capitalize uk-form-label" value="#{administracion['detalleprofesor.active.modal.header.password']}"/>
                                 <div class="uk-inline">
                                     <h:commandLink styleClass="uk-form-icon uk-form-icon-flip">
@@ -270,12 +274,22 @@
                                     </h:inputSecret>
                                 </div>
                                 <h:message for="input-secret-editar-password" errorClass="uk-text-danger uk-display-inline-block primera-mayuscula"/>
+                                </ui:remove>
+                                <c:forEach begin="1" end="28" var="indice">
+                                    <h:graphicImage library="img" name="alumno/iconos-login/${indice}.svg" />
+                                </c:forEach>
+                                <h:inputHidden id="input-secret-password"
+                                               value="#{coordinadorControlador.coordinadorModelo.contrasenia}">
+                                    <f:validateRequired/>
+                                    <f:converter converterId="tecolotl.web.ContraseniaConvertidor"/>
+                                </h:inputHidden>
+
                             </div>
                         </div>
                     </div>
                     <div class="uk-modal-footer uk-text-right">
                         <button class="uk-button uk-button-default uk-modal-close" type="button">#{boton['cancel']}</button>
-                        <h:commandButton styleClass="uk-button uk-button-secondary  uk-margin-small-left" value="#{boton['accept']}" rendered="#{empty coordinadorControlador.coordinadorModelo.contador}">
+                        <h:commandButton styleClass="uk-button uk-button-secondary  uk-margin-small-left" onclick="cargaContrasenia()" value="#{boton['accept']}" rendered="#{empty coordinadorControlador.coordinadorModelo.contador}">
                             <f:ajax onevent="function cerrar(data) { cierraModal(data,'modalCoordinador') }"
                                     render="@form formulario-coordinador"
                                     execute="@form"
@@ -350,12 +364,14 @@
                 </h:form>
             </div>
         </h:panelGroup>
+        <h:outputScript library="js" name="/administracion/coordinador.js"/>
         <script type="text/javascript">
             var contrassenia;
             var contrasseniaeditar;
             var modalCoordinador;
             var modalEliminar;
             var modalBloqueo;
+
         /*    var modalLicencia;
             var modalCoord;*/
             document.addEventListener("DOMContentLoaded", function (evt) {
@@ -367,6 +383,8 @@
                     modalCoord = document.querySelector('#modal-nuevo-coord'); */
                 UIkit.util.on('#modal-coordinador', 'show', function () {
                     modalCoordinador.querySelector('.uk-modal-body').click();
+                    console.log('entro');
+                    setTimeout(efectosImagenes,500);
                 });
                 UIkit.util.on('#modal-eliminar-coordinador', 'show', function () {
                     modalEliminar.querySelector('.uk-modal-body').click();
@@ -443,7 +461,9 @@
                 }
             }
         </script>
+
     </ui:define>
+
 </ui:composition>
 
 
